@@ -1,3 +1,4 @@
+* Add Stripe pull button to payment
 * Warn when changing credential
 
 Version 7.2.0 - 2024-04-29
